--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -21,7 +21,6 @@ jobs:
   build_and_deploy:
     name: Build + Deploy
     runs-on: self-hosted
-
     steps:
       - uses: actions/checkout@v4
 
@@ -33,15 +32,46 @@ jobs:
 
       - id: loc
         name: Locate frontend directory
+        env:
+          FRONTEND_DIR: ${{ vars.FRONTEND_DIR }}
         run: |
           set -euo pipefail
-          CANDIDATES=("frontend" "web" "app" "ui" "client" "apps/frontend" "apps/web" "packages/frontend" "packages/web")
+          if [ -n "${FRONTEND_DIR:-}" ]; then
+            [ -d "$FRONTEND_DIR" ] && [ -f "$FRONTEND_DIR/package.json" ] || { echo "FRONTEND_DIR invalid"; exit 2; }
+            echo "dir=${FRONTEND_DIR#./}" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+          mapfile -t PKG_DIRS < <(find . -type f -name package.json -not -path "*/node_modules/*" -printf '%h\n' | sort -u)
+          pick_dir() {
+            for d in "$@"; do
+              for p in "${PKG_DIRS[@]}"; do
+                if [[ "$p" == "./$d" || "$p" == "$d" ]]; then echo "${p#./}"; return 0; fi
+              done
+            done
+            return 1
+          }
           DIR=""
-          for d in "${CANDIDATES[@]}"; do
-            if [ -d "$d" ] && [ -f "$d/package.json" ]; then DIR="$d"; break; fi
-          done
+          COMMON=(frontend web app ui client apps/frontend apps/web packages/frontend packages/web)
+          if [ -z "$DIR" ]; then
+            CAND=$(pick_dir "${COMMON[@]}") && DIR="$CAND"
+          fi
+          if [ -z "$DIR" ]; then
+            for p in "${PKG_DIRS[@]}"; do
+              if jq -e '.scripts.build // empty' "$p/package.json" >/dev/null 2>&1; then DIR="${p#./}"; break; fi
+            done
+          fi
+          if [ -z "$DIR" ]; then
+            for p in "${PKG_DIRS[@]}"; do
+              if jq -e '(.dependencies//{} + .devDependencies//{}) | has("next") or has("@angular/core") or has("vite") or has("react-scripts") or has("react")' "$p/package.json" >/dev/null 2>&1; then
+                DIR="${p#./}"; break
+              fi
+            done
+          fi
+          if [ -z "$DIR" ] && [ -f package.json ] && jq -e '.scripts.build // empty' package.json >/dev/null 2>&1; then
+            DIR="."
+          fi
           [ -n "$DIR" ] || { echo "Could not locate frontend folder"; exit 2; }
-          echo "dir=${DIR#./}" >> "$GITHUB_OUTPUT"
+          echo "dir=$DIR" >> "$GITHUB_OUTPUT"
 
       - uses: actions/setup-node@v4
         with:
@@ -79,10 +109,32 @@ jobs:
           CI: "true"
         run: |
           set -euo pipefail
-          npm run build || { echo "No build script"; exit 1; }
-          OUT="dist"
-          [ -d build ] && OUT="build"
-          [ -d out ] && OUT="out"
+          if jq -e '.scripts.build // empty' package.json >/dev/null 2>&1; then
+            npm run build
+          else
+            if jq -e '(.dependencies//{} + .devDependencies//{}) | has("@angular/core")' package.json >/dev/null; then
+              npx ng build --configuration production || npx nx build || npm run build
+            elif jq -e '(.dependencies//{} + .devDependencies//{}) | has("next")' package.json >/dev/null; then
+              npx next build
+              if jq -e '.scripts | has("export")' package.json >/dev/null 2>&1; then npm run export; fi
+            elif jq -e '(.dependencies//{} + .devDependencies//{}) | has("vite")' package.json >/dev/null; then
+              npx vite build
+            elif jq -e '(.dependencies//{} + .devDependencies//{}) | has("react-scripts")' package.json >/dev/null; then
+              npx react-scripts build
+            else
+              echo "No build script and no known framework detected"; exit 1
+            fi
+          fi
+          OUT="build"
+          if [ -f angular.json ]; then
+            DEFAULT_PROJECT=$(jq -r '.defaultProject // empty' angular.json)
+            [ -z "$DEFAULT_PROJECT" -o "$DEFAULT_PROJECT" = "null" ] && DEFAULT_PROJECT=$(jq -r '.projects | keys[0]' angular.json)
+            OUT=$(jq -r --arg p "$DEFAULT_PROJECT" '.projects[$p].architect.build.options.outputPath // .projects[$p].targets.build.options.outputPath // "dist"' angular.json)
+          elif [ -d dist ]; then OUT="dist"
+          elif [ -d build ]; then OUT="build"
+          elif [ -d out ]; then OUT="out"
+          elif [ -d .next ]; then OUT=".next"
+          fi
           echo "dir=$OUT" >> "$GITHUB_OUTPUT"
 
       - name: Deploy locally
