--- a/ledger-portal-main(1)/ledger-portal-main/nginx.conf
+++ b/ledger-portal-main(1)/ledger-portal-main/nginx.conf
@@ -1,73 +1,42 @@
-events {
-    worker_connections 1024;
-}
+server {
+  listen 80;
+  server_name _;
+  root /usr/share/nginx/html;
+  index index.html;
 
-http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+  add_header X-Frame-Options "SAMEORIGIN" always;
+  add_header X-Content-Type-Options "nosniff" always;
+  add_header X-XSS-Protection "1; mode=block" always;
+  add_header Referrer-Policy "no-referrer-when-downgrade" always;
 
-    # Logging
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+  gzip on;
+  gzip_vary on;
+  gzip_min_length 10240;
+  gzip_proxied expired no-cache no-store private auth;
+  gzip_types text/plain text/css text/xml application/xml application/json application/javascript;
+  gzip_disable "MSIE [1-6]\.";
 
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 10240;
-    gzip_proxied expired no-cache no-store private auth;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml application/javascript application/json;
-    gzip_disable "MSIE [1-6]\.";
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    expires 1y;
+    add_header Cache-Control "public, immutable";
+    try_files $uri =404;
+  }
 
-    server {
-        listen 80;
-        server_name localhost;
-        root /usr/share/nginx/html;
-        index index.html;
+  location = /index.html {
+    add_header Cache-Control "no-cache, no-store, must-revalidate";
+    add_header Pragma "no-cache";
+    add_header Expires "0";
+  }
 
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+  location = / {
+    return 301 /gam/;
+  }
 
-        # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
+  location = /gam {
+    return 301 /gam/;
+  }
 
-        # Disable caching for index.html
-        location = /index.html {
-            add_header Cache-Control "no-cache, no-store, must-revalidate";
-            add_header Pragma "no-cache";
-            add_header Expires "0";
-        }
-
-        # Root redirect to /gam
-        location = / {
-            return 301 /gam;
-        }
-
-        # GAM route - serve Angular app under /gam prefix
-        location /gam {
-            # Strip /gam prefix for Angular routing
-            rewrite ^/gam(/.*)$ $1 break;
-            rewrite ^/gam$ / break;
-            try_files $uri $uri/ /index.html;
-        }
-
-        # API proxy (if you have a backend API)
-        # Uncomment and configure if needed
-        # location /api {
-        #     proxy_pass http://your-backend-api:port;
-        #     proxy_http_version 1.1;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection 'upgrade';
-        #     proxy_set_header Host $host;
-        #     proxy_cache_bypass $http_upgrade;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
-    }
+  location /gam/ {
+    try_files $uri $uri/ /index.html;
+  }
 }
