--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -4,16 +4,14 @@ on:
   push:
     branches: [main]
     paths:
-      - "frontend/**"
-      - "apps/frontend/**"
-      - "packages/frontend/**"
+      - "**/package.json"
+      - "**/src/**"
       - ".github/workflows/frontend.yml"
   pull_request:
     branches: [main]
     paths:
-      - "frontend/**"
-      - "apps/frontend/**"
-      - "packages/frontend/**"
+      - "**/package.json"
+      - "**/src/**"
       - ".github/workflows/frontend.yml"
 
 concurrency:
@@ -104,8 +102,7 @@ jobs:
     if: github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
-      - name: retag-and-up
-        run: |
+      - run: |
           set -euo pipefail
           docker tag "${{ env.IMAGE_NAME }}:${GITHUB_SHA}" "${{ env.IMAGE_NAME }}:${{ env.STABLE_TAG }}"
           cd deploy
