Revert "Update frontend.yml"
This reverts commit 0f79201b43f0f9d62dc4f52775828fab69d7cefc.

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -4,16 +4,14 @@ on:
   push:
     branches: [main]
     paths:
-      - "frontend/**"
-      - "apps/frontend/**"
-      - "packages/frontend/**"
+      - "**/package.json"
+      - "**/src/**"
       - ".github/workflows/frontend.yml"
   pull_request:
     branches: [main]
     paths:
-      - "frontend/**"
-      - "apps/frontend/**"
-      - "packages/frontend/**"
+      - "**/package.json"
+      - "**/src/**"
       - ".github/workflows/frontend.yml"
 
 concurrency:
@@ -25,13 +23,13 @@ env:
   IMAGE_NAME: "frontend"
   STABLE_TAG: "current"
   APP_PORT: "18080"
-  BUILDX_CACHE_DIR: "/var/tmp/buildx-cache"
 
 permissions:
   contents: read
 
 jobs:
   detect:
+    name: detect
     runs-on: self-hosted
     outputs:
       dir: ${{ steps.loc.outputs.dir }}
@@ -41,13 +39,12 @@ jobs:
         run: |
           set -euo pipefail
           if sudo -n true 2>/dev/null; then echo "sudo_available=true" >> "$GITHUB_OUTPUT"; else echo "sudo_available=false" >> "$GITHUB_OUTPUT"; fi
-      - name: ensure-tools
+      - name: ensure-jq
         run: |
           set -euo pipefail
           if ! command -v jq >/dev/null 2>&1; then
             if [ "${{ steps.preflight.outputs.sudo_available }}" = "true" ]; then sudo apt-get update && sudo apt-get install -y jq; else exit 1; fi
           fi
-          if [ "${{ steps.preflight.outputs.sudo_available }}" = "true" ]; then sudo mkdir -p "${{ env.BUILDX_CACHE_DIR }}"; fi
       - id: loc
         env:
           FRONTEND_DIR: ${{ vars.FRONTEND_DIR }}
@@ -59,8 +56,9 @@ jobs:
             exit 0
           fi
           mapfile -t PKG_DIRS < <(find . -type f -name package.json -not -path "*/node_modules/*" -printf '%h\n' | sort -u)
-          pick_dir() { for d in frontend apps/frontend packages/frontend web app ui client; do for p in "${PKG_DIRS[@]}"; do [[ "$p" == "./$d" || "$p" == "$d" ]] && { echo "${p#./}"; return 0; }; done; done; return 1; }
-          DIR="$(pick_dir)" || true
+          pick_dir() { for d in "$@"; do for p in "${PKG_DIRS[@]}"; do [[ "$p" == "./$d" || "$p" == "$d" ]] && { echo "${p#./}"; return 0; }; done; done; return 1; }
+          COMMON=(frontend web app ui client apps/frontend apps/web packages/frontend packages/web)
+          DIR="$(pick_dir "${COMMON[@]}")" || true
           if [ -z "$DIR" ]; then
             for p in "${PKG_DIRS[@]}"; do if jq -e '.scripts.build // empty' "$p/package.json" >/dev/null 2>&1; then DIR="${p#./}"; break; fi; done
           fi
@@ -70,49 +68,44 @@ jobs:
           [ -n "$DIR" ] || { echo "frontend not found"; exit 2; }
           echo "dir=$DIR" >> "$GITHUB_OUTPUT"
 
-  build:
+  docker_build:
+    name: build
     runs-on: self-hosted
     needs: [detect]
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: |
-            image=moby/buildkit:latest
       - id: meta
         run: |
           set -euo pipefail
           echo "image_ref=${{ env.IMAGE_NAME }}:${GITHUB_SHA}" >> "$GITHUB_OUTPUT"
-      - name: docker-build
-        uses: docker/build-push-action@v6
+      - uses: docker/build-push-action@v6
         with:
           context: ${{ needs.detect.outputs.dir }}
           file: ${{ needs.detect.outputs.dir }}/Dockerfile
           tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
           load: true
-          provenance: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           build-args: |
             NODE_VERSION=${{ env.NODE_VERSION }}
-          cache-from: |
-            type=local,src=${{ env.BUILDX_CACHE_DIR }}
-          cache-to: |
-            type=local,dest=${{ env.BUILDX_CACHE_DIR }},mode=max
 
   deploy:
+    name: deploy
     runs-on: self-hosted
-    needs: [build]
-    if: github.event_name == 'push'
+    needs: [docker_build]
     steps:
       - uses: actions/checkout@v4
-      - name: retag-and-up
-        run: |
+      - run: |
           set -euo pipefail
           docker tag "${{ env.IMAGE_NAME }}:${GITHUB_SHA}" "${{ env.IMAGE_NAME }}:${{ env.STABLE_TAG }}"
           cd deploy
           docker compose up -d --no-deps frontend
           for i in $(seq 1 15); do
             sleep 2
-            if curl -fsS -I "http://localhost:${{ env.APP_PORT }}/" >/dev/null 2>&1; then exit 0; fi
+            if curl -fsS -I "http://localhost:${{ env.APP_PORT }}/" >/dev/null 2>&1; then
+              exit 0
+            fi
           done
           docker compose logs --no-color --tail=200 frontend || true
           exit 1
