--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -80,9 +80,10 @@ jobs:
           set -euo pipefail
           echo "image_ref=${{ env.IMAGE_NAME }}:${GITHUB_SHA}" >> "$GITHUB_OUTPUT"
       - uses: docker/build-push-action@v6
+        working-directory: ${{ needs.detect.outputs.dir }}
         with:
-          context: ${{ needs.detect.outputs.dir }}
-          file: ${{ needs.detect.outputs.dir }}/Dockerfile
+          context: .
+          file: ./Dockerfile
           tags: ${{ env.IMAGE_NAME }}:${{ github.sha }}
           load: true
           cache-from: type=gha
